--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
+asn1crypto==0.24.0
 atomicwrites==1.3.0
 attrs==19.3.0
-Click==7.1.1
+click==7.1.1
+cryptography==2.1.4
 Flask==1.1.2
 flask-redis==0.4.0
 Flask-Testing==0.8.0
+idna==2.6
 importlib-metadata==0.23
 itsdangerous==1.1.0
 Jinja2==2.11.2
+keyring==10.6.0
+keyrings.alt==3.0
 MarkupSafe==1.1.1
 more-itertools==8.2.0
 packaging==20.3
+Pillow==5.1.0
 pluggy==0.13.1
 py==1.8.1
+pycrypto==2.6.1
+pygobject==3.26.1
 pyparsing==2.4.7
 pytest==5.4.1
+pyxdg==0.25
 redis==3.4.1
+rq==1.3.0
+SecretStorage==2.3.1
 six==1.14.0
 wcwidth==0.1.9
 Werkzeug==1.0.1
