--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asn1crypto==0.24.0
 atomicwrites==1.3.0
 attrs==19.3.0
 click==7.1.1
+croniter==0.3.31
 cryptography==2.1.4
 Flask==1.1.2
 flask-redis==0.4.0
@@ -22,9 +23,11 @@ pycrypto==2.6.1
 pygobject==3.26.1
 pyparsing==2.4.7
 pytest==5.4.1
+python-dateutil==2.8.1
 pyxdg==0.25
 redis==3.4.1
 rq==1.3.0
+rq-scheduler==0.9.1
 SecretStorage==2.3.1
 six==1.14.0
 wcwidth==0.1.9
