--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,8 @@
-asn1crypto==0.24.0
-Click==7.0
-cryptography==2.1.4
-Flask==1.1.1
-idna==2.6
-itsdangerous==1.1.0
-Jinja2==2.10.1
-keyring==10.6.0
-keyrings.alt==3.0
-MarkupSafe==1.1.1
-marshmallow==3.2.0
-Pillow==5.1.0
-pycrypto==2.6.1
-pygobject==3.26.1
-pyxdg==0.25
-SecretStorage==2.3.1
-six==1.11.0
-Werkzeug==0.16.0
+setuptools
+Flask==1.1.2
+flask-redis==0.4.0
+pytest==6.1.1
+rq==1.5.2
+rq-scheduler==0.10.0
+gunicorn==20.0.4
+celery==5.0.0
